Add and modify files

--- a/12-App/site.mattcloudtech/site dev.ipynb
+++ b/12-App/site.mattcloudtech/site dev.ipynb
@@ -552,7 +552,12 @@
   {
    "cell_type": "raw",
    "id": "3ccb7afd-629e-4245-98b0-39b94d8e117f",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "%%writefile app.py\n",
     "# Import libraries\n",
@@ -843,6 +848,346 @@
     "    # Close Connection\n",
     "    cur.close()\n",
     "    con.close()\n",
+    "#----------End of Agent Section----------#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e991b768-ae14-4aec-b0f8-d68196b4c69d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile app.py\n",
+    "# Import libraries\n",
+    "import streamlit as st\n",
+    "import psycopg2\n",
+    "import os\n",
+    "import time\n",
+    "import vertexai\n",
+    "from vertexai.language_models import TextGenerationModel\n",
+    "from env import *\n",
+    "\n",
+    "#----------Page Configuration----------# \n",
+    "st.set_page_config(page_title=\"Matt Cloud Tech\",\n",
+    "                   page_icon=\":cloud:\",\n",
+    "                   menu_items={\n",
+    "                       'About':\"# Matt Cloud Tech\"})\n",
+    "\n",
+    "#----------About Me Section----------#\n",
+    "st.title(\":cloud: Matt Cloud Tech\")\n",
+    "st.header(\"\", divider=\"rainbow\")\n",
+    "\n",
+    "st.write(\"\"\"\n",
+    "        ### Good day :wave:.\n",
+    "        ### My name is :blue[Matt]. I am a Cloud Technology Enthusiast. :technologist:\n",
+    "        ### Currently, I am learning and building Cloud Infrastructure, Data and CI/CD Pipelines, and Intelligent Systems. \n",
+    "        \"\"\") \n",
+    "# st.divider()\n",
+    "#----------End of About Me Section----------#\n",
+    "\n",
+    "#----------Portfolio Section----------#\n",
+    "with st.expander(' :notebook: Portfolio'):\n",
+    "    # Connect to a database\n",
+    "    con = psycopg2.connect(f\"\"\"\n",
+    "                           dbname={DBNAME}\n",
+    "                           user={USER}\n",
+    "                           host={HOST}\n",
+    "                           port={PORT}\n",
+    "                           password={PASSWORD}\n",
+    "                           \"\"\")\n",
+    "    cur = con.cursor()\n",
+    "\n",
+    "    # Create a table if not exists\n",
+    "    cur.execute(\"CREATE TABLE IF NOT EXISTS portfolio(id serial PRIMARY KEY, project_name varchar, description varchar, link varchar)\")\n",
+    "    con.commit()    \n",
+    "    st.write(\"### Project Collection\")\n",
+    "    cur.execute(\"\"\"\n",
+    "                SELECT * \n",
+    "                FROM portfolio\n",
+    "                \"\"\")\n",
+    "    for id, project_name, description, link in cur.fetchall():\n",
+    "        st.write(f\"### [{project_name}]({link})\")\n",
+    "        st.write(f\"{description}\")\n",
+    "        st.divider()\n",
+    "    \n",
+    "    # Add new project\n",
+    "    add = st.checkbox(\"Modify\")\n",
+    "    if add:\n",
+    "        password = st.text_input(\"Password\")\n",
+    "        if password == PASSWORD:\n",
+    "            modify = st.text_input(\"Add or Delete\")\n",
+    "            if modify == \"Add\":\n",
+    "                project_name = st.text_input(\"Project Name\")\n",
+    "                description = st.text_input(\"Description\")\n",
+    "                link = st.text_input(\"Link\")\n",
+    "                ### Insert into adatabase\n",
+    "                save = st.button(\"Save\")\n",
+    "                if save:\n",
+    "                    SQL = \"INSERT INTO portfolio (project_name, description, link) VALUES(%s, %s, %s);\"\n",
+    "                    data = (project_name, description, link)\n",
+    "                    cur.execute(SQL, data)\n",
+    "                    con.commit()\n",
+    "                    st.write(\"Successfully Added.\")\n",
+    "                    st.button(\"Done\")\n",
+    "            elif modify == \"Delete\":\n",
+    "                project_name = st.text_input(\"Project Name\")\n",
+    "                delete = st.button(\"Delete\")\n",
+    "                if delete:\n",
+    "                    cur.execute(f\"DELETE FROM portfolio WHERE project_name = '{project_name}';\")\n",
+    "                    con.commit()\n",
+    "                    st.success(\"Successfully Deleted.\")\n",
+    "                    st.button(\"Done\")\n",
+    "            \n",
+    "#----------End of Portfolio Section----------#\n",
+    "\n",
+    "#----------Notepad Section----------#\n",
+    "with st.expander(' :pencil: Notepad'):\n",
+    "    st.header(\"Notepad :notebook:\",divider=\"rainbow\")\n",
+    "    st.caption(\"\"\"\n",
+    "                Add your thoughts here! It will be stored in a database! \\n\n",
+    "                :warning: :red[Do not add sensitive data.]\n",
+    "                \"\"\")\n",
+    "    # Connect to a database\n",
+    "    con = psycopg2.connect(f\"\"\"\n",
+    "                           dbname={DBNAME}\n",
+    "                           user={USER}\n",
+    "                           host={HOST}\n",
+    "                           port={PORT}\n",
+    "                           password={PASSWORD}\n",
+    "                           \"\"\")\n",
+    "    cur = con.cursor()\n",
+    "\n",
+    "    # Create a table if not exists\n",
+    "    cur.execute(\"CREATE TABLE IF NOT EXISTS notes(id serial PRIMARY KEY, name varchar, header varchar, note varchar, time varchar)\")\n",
+    "    con.commit()\n",
+    "\n",
+    "    # Inputs\n",
+    "    name = st.text_input(\"Your Name\")\n",
+    "    header = st.text_input(\"Header\")\n",
+    "    note = st.text_area(\"Note\")\n",
+    "    if st.button(\"Add a note\"):\n",
+    "        time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
+    "        st.write(f\"\"\" \\n\n",
+    "                ##### :pencil: {header} \\n\n",
+    "                #### {note} \\n\n",
+    "                :man: {name} \\n\"\"\")\n",
+    "        st.caption(f\":watch: {time}\")\n",
+    "        st.success(\"Successfully Added.\")\n",
+    "        # st.balloons()\n",
+    "        ### Insert into adatabase\n",
+    "        SQL = \"INSERT INTO notes (name, header, note, time) VALUES(%s, %s, %s, %s);\"\n",
+    "        data = (name, header, note, time)\n",
+    "        cur.execute(SQL, data)\n",
+    "        con.commit()\n",
+    "\n",
+    "    # Previous Notes \n",
+    "    st.divider()\n",
+    "    notes = st.checkbox(\"See previous notes\")\n",
+    "    if notes:\n",
+    "        st.write(\"### **:gray[Previous Notes]**\")\n",
+    "        cur.execute(\"\"\"\n",
+    "                    SELECT * \n",
+    "                    FROM notes\n",
+    "                    ORDER BY time DESC\n",
+    "                    \"\"\")\n",
+    "        for id, name, header, note, time in cur.fetchall():\n",
+    "            st.write(f\"\"\" \\n\n",
+    "                    ##### :pencil: {header} \\n\n",
+    "                    #### {note} \\n\n",
+    "                    :man: {name} \\n\"\"\")\n",
+    "            st.caption(f\":watch: {time}\")\n",
+    "\n",
+    "            modify = st.toggle(f\"Edit or Delete (ID #: {id})\")\n",
+    "            if modify:\n",
+    "                name = st.text_input(f\"Your Name (ID #: {id})\", name)\n",
+    "                header = st.text_input(f\"Header (ID #: {id})\", header)\n",
+    "                note = st.text_area(f\"Note (ID #: {id})\", note)\n",
+    "                if st.button(f\"UPDATE ID #: {id}\"):\n",
+    "                    SQL = \" UPDATE notes SET id=%s, name=%s, header=%s, note=%s WHERE id = %s\"\n",
+    "                    data = (id, name, header, note, id)\n",
+    "                    cur.execute(SQL, data)\n",
+    "                    con.commit()\n",
+    "                    st.success(\"Successfully Edited.\")\n",
+    "                    st.button(\":blue[Done]\")\n",
+    "                if st.button(f\"DELETE ID #: {id}\"):\n",
+    "                    cur.execute(f\"DELETE FROM notes WHERE id = {id}\")\n",
+    "                    con.commit()\n",
+    "                    st.success(\"Successfully Deleted.\")\n",
+    "                    st.button(\":blue[Done]\")\n",
+    "            st.subheader(\"\",divider=\"gray\")\n",
+    "\n",
+    "    # Close Connection\n",
+    "    cur.close()\n",
+    "    con.close()\n",
+    "#----------End of Notepad Section----------#\n",
+    "\n",
+    "#----------Counter----------#\n",
+    "with st.expander(' :watch: Counter'):\n",
+    "    st.header(\"Counter\")\n",
+    "    st.caption(\"\"\"\n",
+    "                Count every request in this app.\n",
+    "                \"\"\")\n",
+    "    st.subheader(\"\",divider=\"rainbow\")\n",
+    "\n",
+    "    con = psycopg2.connect(f\"\"\"\n",
+    "                           dbname={DBNAME}\n",
+    "                           user={USER}\n",
+    "                           host={HOST}\n",
+    "                           port={PORT}\n",
+    "                           password={PASSWORD}\n",
+    "                           \"\"\")\n",
+    "    cur = con.cursor()\n",
+    "    # Create a table if not exists\n",
+    "    cur.execute(\"CREATE TABLE IF NOT EXISTS counter(id serial PRIMARY KEY, view int, time varchar)\")\n",
+    "    con.commit()\n",
+    "\n",
+    "    # Counter\n",
+    "    import time\n",
+    "    time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
+    "    view = 1\n",
+    "    ### Insert into a database\n",
+    "    SQL = \"INSERT INTO counter (view, time) VALUES(%s, %s);\"\n",
+    "    data = (view, time)\n",
+    "    cur.execute(SQL, data)\n",
+    "    con.commit()\n",
+    "\n",
+    "    # Total views\n",
+    "    cur.execute(\"\"\"\n",
+    "                SELECT SUM(view) \n",
+    "                FROM counter\n",
+    "                \"\"\")\n",
+    "    st.write(f\"#### Total views: **{cur.fetchone()[0]}**\")\n",
+    "    # Current view\n",
+    "    st.write(f\"Current: {time}\")\n",
+    "    # Total views today\n",
+    "    time_date = time[0:15]\n",
+    "    cur.execute(f\"\"\"\n",
+    "                SELECT SUM(view) \n",
+    "                FROM counter\n",
+    "                WHERE time LIKE '{time_date}%'\n",
+    "                \"\"\")\n",
+    "    st.write(f\"#### Total views today: **{cur.fetchone()[0]}**\")\n",
+    "    # Previous views\n",
+    "    st.divider()\n",
+    "    views = st.checkbox(\"See Previous Views\")\n",
+    "    # TODO: Total views today (Visualization)\n",
+    "    if views:\n",
+    "        st.write(\"**Previous Views**\")\n",
+    "        cur.execute(\"\"\"\n",
+    "                    SELECT * \n",
+    "                    FROM counter\n",
+    "                    ORDER BY time DESC\n",
+    "                    \"\"\")\n",
+    "        for _, _, time in cur.fetchall():\n",
+    "            st.caption(f\"{time}\")\n",
+    "\n",
+    "    # Close Connection\n",
+    "    cur.close()\n",
+    "    con.close()\n",
+    "#----------End of Counter----------#\n",
+    "\n",
+    "\n",
+    "#----------External links---------#\n",
+    "with st.expander(' :link: External Links'):\n",
+    "    st.write(\":link: :computer: [Personal Website](https://)\")\n",
+    "    st.write(\":link: :book: [Project Repository](https://)\")\n",
+    "    st.write(\":link: :notebook: [Blog](https://)\")\n",
+    "    st.write(\":link: :hand: [Connect with me](https://)\")\n",
+    "#----------End of External links---------#\n",
+    "\n",
+    "#----------Agent Section----------#\n",
+    "#----------Vertex AI----------#\n",
+    "agent = st.checkbox(' :computer: Agent (Talk to my Intelligent Assistant :technologist:)')\n",
+    "# agent = st.toggle(' :computer: Agent (Talk to my Intelligent Assistant :technologist:)')\n",
+    "if agent:\n",
+    "    vertexai.init(project=\"matt-project-training\", location=\"us-central1\")\n",
+    "    parameters = {\n",
+    "        \"candidate_count\": 1,\n",
+    "        \"max_output_tokens\": 1024,\n",
+    "        \"temperature\": 0.2,\n",
+    "        \"top_p\": 0.8,\n",
+    "        \"top_k\": 40\n",
+    "    }\n",
+    "    model = TextGenerationModel.from_pretrained(\"text-bison\")\n",
+    "\n",
+    "    # response = model.predict(\n",
+    "    #    \"\"\"Hi\"\"\",\n",
+    "    #    **parameters\n",
+    "    # )\n",
+    "    # st.write(f\"Response from Model: {response.text}\")\n",
+    "\n",
+    "    #----------End of Vertex AI----------#\n",
+    "    import time\n",
+    "    st.header(\":computer: Agent \",divider=\"rainbow\")\n",
+    "    st.caption(\"### Chat with my agent\")\n",
+    "    st.write(f\":violet[Your chat will be stored in a database, use the same name to see your past conversations.]\")\n",
+    "    st.caption(\":warning: :red[Do not add sensitive data.]\")\n",
+    "    \n",
+    "    # Variable\n",
+    "    database_name = DBNAME\n",
+    "    # Connect to a database\n",
+    "    con = psycopg2.connect(f\"\"\"\n",
+    "                           dbname={DBNAME}\n",
+    "                           user={USER}\n",
+    "                           host={HOST}\n",
+    "                           port={PORT}\n",
+    "                           password={PASSWORD}\n",
+    "                           \"\"\")\n",
+    "    cur = con.cursor()\n",
+    "    # Create a table if not exists\n",
+    "    cur.execute(\"CREATE TABLE IF NOT EXISTS chats(id serial PRIMARY KEY, name varchar, prompt varchar, output varchar, time varchar)\")\n",
+    "    con.commit()\n",
+    "\n",
+    "    # Prompt\n",
+    "    input_name = st.text_input(\"Your Name:\")\n",
+    "    agent = st.toggle(\"**Let's go**\")\n",
+    "    if agent:\n",
+    "        st.write(f\"Your name for this chat is :blue[{input_name}]\")\n",
+    "        prompt = st.chat_input(\"Talk to my agent\")\n",
+    "        if prompt:\n",
+    "            time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
+    "            message = st.chat_message(\"user\")\n",
+    "            message.write(f\":blue[{input_name}]: {prompt}\")\n",
+    "            message.caption(f\"{time}\")\n",
+    "            message = st.chat_message(\"assistant\")\n",
+    "            response = model.predict(prompt,\n",
+    "                **parameters\n",
+    "            )\n",
+    "            output = response.text\n",
+    "            message.write(output)\n",
+    "            message.caption(f\"{time}\")\n",
+    "            st.divider()\n",
+    "\n",
+    "            ### Insert into a database\n",
+    "            SQL = \"INSERT INTO chats (name, prompt, output, time) VALUES(%s, %s, %s, %s);\"\n",
+    "            data = (input_name, prompt, output, time)\n",
+    "            cur.execute(SQL, data)\n",
+    "            con.commit()\n",
+    "\n",
+    "\n",
+    "        with st.expander(f\"See Previous Conversation for {input_name}\"):\n",
+    "            cur.execute(f\"\"\"\n",
+    "                        SELECT * \n",
+    "                        FROM chats\n",
+    "                        WHERE name='{input_name}'\n",
+    "                        ORDER BY time ASC\n",
+    "                        \"\"\")\n",
+    "            for id, name, prompt, output, time in cur.fetchall():\n",
+    "                message = st.chat_message(\"user\")\n",
+    "                message.write(f\":blue[{name}]: {prompt}\")\n",
+    "                message.caption(f\"{time}\")\n",
+    "                message = st.chat_message(\"assistant\")\n",
+    "                message.write(output)\n",
+    "                message.caption(f\"{time}\")\n",
+    "    # Close Connection\n",
+    "    cur.close()\n",
+    "    con.close()\n",
+    "#----------End of Agent Section----------#\n",
+    "\n",
+    "# Close Connection\n",
+    "cur.close()\n",
+    "con.close()\n",
     "#----------End of Agent Section----------#"
    ]
   },
