--- a/08-Logging-Observability-Monitoring-Alerting/Helm-Kubernetes-Grafana-Prometheus.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Helm-Kubernetes-Grafana-Prometheus.ipynb
@@ -434,7 +434,7 @@
     "    spec:\n",
     "      containers:\n",
     "      - name: notepad\n",
-    "        image: mattregojos/app:latest\n",
+    "        image: <USERNAME>/app:latest\n",
     "        ports:\n",
     "        - containerPort: 8501"
    ]
